Implemented Admin form with several options (Users, Security, Predefined data, etc.). Finished with the implementation of the Login form. Implemented API service for interaction with the API.

--- a/Healthcare020.WinUI/KorisnickiNalog/frmLogin.resx
+++ b/Healthcare020.WinUI/KorisnickiNalog/frmLogin.resx
@@ -265,4 +265,7 @@
         J5rHBUfa2BO7giAIgiAIgiAIgiAIQmbI5f4fZnYQZ/g4FsYAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="materialContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>84, 17</value>
+  </metadata>
 </root>
