--- a/Healthcare020.WinUI/Helpers/CustomElements/pnlDisplayData.resx
+++ b/Healthcare020.WinUI/Helpers/CustomElements/pnlDisplayData.resx
@@ -117,35 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AccessDenied" xml:space="preserve">
-    <value>Nemate potrebne permisije</value>
-  </data>
-  <data name="DifferentPasswords" xml:space="preserve">
-    <value>Lozinke se ne podudaraju</value>
-  </data>
-  <data name="frmDrzave" xml:space="preserve">
-    <value>Predefinisani podaci - Države</value>
-  </data>
-  <data name="frmNewUser" xml:space="preserve">
-    <value>Novi korisnički nalog</value>
-  </data>
-  <data name="frmPredefinedData" xml:space="preserve">
-    <value>Predefinisani podaci</value>
-  </data>
-  <data name="frmStartMenuAdmin" xml:space="preserve">
-    <value>Administratorski meni</value>
-  </data>
-  <data name="frmUsers" xml:space="preserve">
-    <value>Korisnički nalozi</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Healthcare020_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\healthcare020_logo_210x210.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="NotLoggedIn" xml:space="preserve">
-    <value>"Niste prijavljeni na sistem!"</value>
-  </data>
-  <data name="RequiredField" xml:space="preserve">
-    <value>Obavezno polje</value>
-  </data>
+  <metadata name="ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Username.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="DateCreated.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Zaključaj.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
