--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -126,6 +126,9 @@
   <data name="frmDrzave" xml:space="preserve">
     <value>Predefinisani podaci - Države</value>
   </data>
+  <data name="frmNewDrzava" xml:space="preserve">
+    <value>Predefinisani podaci - Nova država</value>
+  </data>
   <data name="frmNewUser" xml:space="preserve">
     <value>Novi korisnički nalog</value>
   </data>
@@ -141,6 +144,9 @@
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Healthcare020_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\healthcare020_logo_210x210.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InvalidFormat" xml:space="preserve">
+    <value>Neispravan format</value>
   </data>
   <data name="NotLoggedIn" xml:space="preserve">
     <value>"Niste prijavljeni na sistem!"</value>
