--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -192,12 +192,57 @@
   <data name="frmZdravstvenaStanja" xml:space="preserve">
     <value>Predefinisani podaci - Zdravstvena stanja</value>
   </data>
+  <data name="GenderFemale" xml:space="preserve">
+    <value>Ženski</value>
+  </data>
+  <data name="GenderMale" xml:space="preserve">
+    <value>Muški</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Healthcare020_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\healthcare020_logo_210x210.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="InvalidFormat" xml:space="preserve">
     <value>Neispravan format</value>
+  </data>
+  <data name="LabelAddress" xml:space="preserve">
+    <value>Adresa</value>
+  </data>
+  <data name="LabelCity" xml:space="preserve">
+    <value>Grad</value>
+  </data>
+  <data name="LabelCountry" xml:space="preserve">
+    <value>Drzava</value>
+  </data>
+  <data name="LabelEmailAddress" xml:space="preserve">
+    <value>E-mail</value>
+  </data>
+  <data name="LabelFirstName" xml:space="preserve">
+    <value>Ime</value>
+  </data>
+  <data name="LabelGender" xml:space="preserve">
+    <value>Pol</value>
+  </data>
+  <data name="LabelJmbg" xml:space="preserve">
+    <value>JMBG</value>
+  </data>
+  <data name="LabelLastName" xml:space="preserve">
+    <value>Prezime</value>
+  </data>
+  <data name="LabelName" xml:space="preserve">
+    <value>Naziv</value>
+  </data>
+  <data name="LabelPersonalData" xml:space="preserve">
+    <value>Lični podaci</value>
+  </data>
+  <data name="LabelPhoneNumber" xml:space="preserve">
+    <value>Broj telefona</value>
+  </data>
+  <data name="LabelSecurity" xml:space="preserve">
+    <value>Sigurnost</value>
+  </data>
+  <data name="LabelUserProfile" xml:space="preserve">
+    <value>Korisnički profil</value>
   </data>
   <data name="NoDataPosete" xml:space="preserve">
     <value>Trenutno nema dostupnih poseta</value>
