Navigation bar now is on the main form. An improved way for closing the user dropdown menu on every click on the form.

--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -274,4 +274,7 @@
   <data name="TitleZahteviZaPregledeStatistic" xml:space="preserve">
     <value>Prikaz broja zahteva za preglede po mesecima</value>
   </data>
+  <data name="WrongUsernameOrPasswordMessage" xml:space="preserve">
+    <value>Netačno korisničko ime ili lozinka</value>
+  </data>
 </root>
