--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -123,6 +123,15 @@
   <data name="DifferentPasswords" xml:space="preserve">
     <value>Lozinke se ne podudaraju</value>
   </data>
+  <data name="frmDoktorPregledi" xml:space="preserve">
+    <value>Svi pregledi</value>
+  </data>
+  <data name="frmDoktorZahteviZaPreglede" xml:space="preserve">
+    <value>Zahtevi za pregled</value>
+  </data>
+  <data name="frmDoktorZakazaniPregledi" xml:space="preserve">
+    <value>Zakazani pregledi</value>
+  </data>
   <data name="frmDrzave" xml:space="preserve">
     <value>Predefinisani podaci - Države</value>
   </data>
@@ -201,6 +210,18 @@
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Healthcare020_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\healthcare020_logo_210x210.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Healthcare020_Logo_210x210" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Healthcare020_Logo_210x210.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Healthcare020_Logo_250x250" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Healthcare020_Logo_250x250.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Healthcare020_Logo_500x500" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Healthcare020_Logo_500x500.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="InstitutionName" xml:space="preserve">
+    <value>Klinički centar UCS</value>
   </data>
   <data name="InvalidFormat" xml:space="preserve">
     <value>Neispravan format</value>
