New main dashboard for RadnikPrijem. New forms for displaying ZahteviZaPosete  and possibility of auto-scheduling of visits. Two visitors for one patient max, in one time of visit. First is at 14:30-15:00, second 18:00-18:30.

--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -192,6 +192,15 @@
   <data name="frmPreglediStatistic" xml:space="preserve">
     <value>Statistika - Obavljeni pregledi</value>
   </data>
+  <data name="frmRadnikPrijemPoseteNeobradjeniZahtevi" xml:space="preserve">
+    <value>Neobrađeni zahtevi sa posete</value>
+  </data>
+  <data name="frmRadnikPrijemPoseteObradjeniZahteviOnly" xml:space="preserve">
+    <value>Obrađeni zahtevi za posete</value>
+  </data>
+  <data name="frmRadnikPrijemPoseteSviZahtevi" xml:space="preserve">
+    <value>Svi zahtevi za posete</value>
+  </data>
   <data name="frmRoles" xml:space="preserve">
     <value>Predefinisani podaci - Uloge</value>
   </data>
