--- a/Healthcare020.WinUI/Forms/KorisnickiNalog/frmLogin.resx
+++ b/Healthcare020.WinUI/Forms/KorisnickiNalog/frmLogin.resx
@@ -2120,4 +2120,7 @@
         AAAAAAAAAACAAQAAgAEAAMADAADgBwAA4AcAAPAPAADwDwAA+B8AAPw/AAA=
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>190, 17</value>
+  </metadata>
 </root>
