Customized tabs on PatientDashboardTabbedPage and created SettingsPage

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -138,4 +138,11 @@
   <data name="InvalidLoginCredentials" xml:space="preserve">
     <value>Neispravno korisničko ime ili lozinka</value>
   </data>
+  <data name="LoggingInLoadingMessage" xml:space="preserve">
+    <value>Logiranje..</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>user.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
