Improved constraints for obtaining tokens from IDP, by adding 3 different clients on the IS4 identity provider server (Mobile, Desktop, and WebAPI). The mobile client can only receive tokens using credentials used by the user account with the Patient role, while the Desktop client can receive the access token only using the credentials used by user accounts with the Admin, Doctor, or WorkerReception roles.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -124,10 +124,10 @@
     <value>https://10.0.2.2:5001/api/</value>
   </data>
   <data name="IdpClientId" xml:space="preserve">
-    <value>Healthcare020_WebAPI</value>
+    <value>Healthcare020_Mobile</value>
   </data>
   <data name="IdpClientSecret" xml:space="preserve">
-    <value>devsecret</value>
+    <value>devsecret_mobile</value>
   </data>
   <data name="IdpTokenEndpoint" xml:space="preserve">
     <value>https://healthcare020-oauth.com:5005/connect/token</value>
