--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -144,10 +144,13 @@
   <data name="PreglediTabTitle" xml:space="preserve">
     <value>Pregledi</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="prof" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>prof.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="SettingsTabTitle" xml:space="preserve">
     <value>Podešavanja</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>user.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
