--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -159,6 +159,9 @@
   <data name="LoggingInLoadingMessage" xml:space="preserve">
     <value>Logiranje..</value>
   </data>
+  <data name="NoviZahtevZaPregledPageTitle" xml:space="preserve">
+    <value>Novi zahtev za pregled</value>
+  </data>
   <data name="PasswordDoNotMatchError" xml:space="preserve">
     <value>Lozinke se ne podudaraju</value>
   </data>
@@ -184,6 +187,9 @@
   <data name="SuccessfullyCreatedAccount" xml:space="preserve">
     <value>Uspešno kreiran korisnički nalog</value>
   </data>
+  <data name="SviPreglediPageTitle" xml:space="preserve">
+    <value>Svi pregledi</value>
+  </data>
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>user.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -195,5 +201,8 @@
   </data>
   <data name="ZahteviTabTitle" xml:space="preserve">
     <value>Zahtevi za pregled</value>
+  </data>
+  <data name="ZakazaniPreglediPageTitle" xml:space="preserve">
+    <value>Zakazani pregledi</value>
   </data>
 </root>
