Implemented page, model display, and everything necessary for successful display of the Medical Certificate list on the Medical Certificates page. Displays ItemFlag icons in an item template in a reusable CustomListView based on the IconFlagsStyle dynamic resource with the IsVisible Setter property that can be changed.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -220,6 +220,9 @@
   <data name="SearchByDoktor" xml:space="preserve">
     <value>Pretraga po doktoru</value>
   </data>
+  <data name="SearchByOpisStanja" xml:space="preserve">
+    <value>Pretraga po opisu stanja</value>
+  </data>
   <data name="SearchPreglediByNapomena" xml:space="preserve">
     <value>Pretraga pregleda po napomeni</value>
   </data>
