--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -173,12 +173,15 @@
     <value>devsecret_mobile</value>
   </data>
   <data name="IdpTokenEndpoint" xml:space="preserve">
-    <value>https://healthcare020-oauth.com:5005/connect/token</value>
+    <value>https://192.168.100.18:7600/connect/token</value>
     <comment>192.168.100.18:7600</comment>
   </data>
   <data name="IdpTokenEndpointAndroid" xml:space="preserve">
     <value>https://192.168.100.18:7600/connect/token</value>
     <comment> 10.0.2.2:5007  10.0.2.2:5005</comment>
+  </data>
+  <data name="IdpTokenEndpointFaceId" xml:space="preserve">
+    <value>https://192.168.100.18:7600/face-recognition</value>
   </data>
   <data name="ImePrezimeLengthError" xml:space="preserve">
     <value>Polje mora sadržati izmedju 2 i 20 slova</value>
