Implemented a new Administrator page called Security. Administrators will be able to keep records of users for whom a Person object has been created in a group of people, as part of Azure FaceAPI. Also, a new controller on the API called FaceRecognition, which will be used for the mentioned actions of the Administrator.

--- a/Healthcare020.WinUI/Properties/Resources.resx
+++ b/Healthcare020.WinUI/Properties/Resources.resx
@@ -211,6 +211,9 @@
   <data name="frmRoles" xml:space="preserve">
     <value>Predefinisani podaci - Uloge</value>
   </data>
+  <data name="frmSecurityTitle" xml:space="preserve">
+    <value>Sigurnost - Face ID person group - Pacijenti</value>
+  </data>
   <data name="frmStartMenuAdministrator" xml:space="preserve">
     <value>Administratorski meni</value>
   </data>
