Implemented a collaborative-filtering recommendation system, using ML.NET framework. The matrix factorization algorithm was used in the implementation. The patient's year of birth (Godiste) was used as a matrix column, and VrijemeUid (unit = 30 minutes, based on the time of the examination in relation to the range from the beginning to the end of working time, formula =>  currentSeconds-540/30). MOBILE => Implemented password verification when deleting a patient-user account.

--- a/HealthCare020.Services/Properties/Resources.resx
+++ b/HealthCare020.Services/Properties/Resources.resx
@@ -138,4 +138,13 @@
   <data name="IdpTokenEndpoint" xml:space="preserve">
     <value>https://healthcare020-oauth.com:5005/connect/token</value>
   </data>
+  <data name="IncorrectPassword" xml:space="preserve">
+    <value>Netačna lozinka</value>
+  </data>
+  <data name="MLModelName" xml:space="preserve">
+    <value>vrijemepregledaml</value>
+  </data>
+  <data name="PasswordsDoNotMatch" xml:space="preserve">
+    <value>Lozinke se ne poklapaju</value>
+  </data>
 </root>
