--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/AppResources.resx
@@ -228,6 +228,9 @@
   <data name="OpisStanja" xml:space="preserve">
     <value>Opis stanja</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>Lozinka</value>
+  </data>
   <data name="PasswordConfirmation" xml:space="preserve">
     <value>Potvrda lozinke</value>
   </data>
