Implemented the use of the recommendation system on the Desktop application, when scheduling a medical examination

--- a/Healthcare020.WinUI/Forms/RadnikDashboard/DoktorDashboard/frmPregledZakazivanje.resx
+++ b/Healthcare020.WinUI/Forms/RadnikDashboard/DoktorDashboard/frmPregledZakazivanje.resx
@@ -2048,4 +2048,7 @@
         AAAAAAAAAACAAQAAgAEAAMADAADgBwAA4AcAAPAPAADwDwAA+B8AAPw/AAA=
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>107, 22</value>
+  </metadata>
 </root>
